@@ -2,8 +2,8 @@
 from flask import Flask
 from flask import request, render_template
 from models.discount import Discount
-from services.cash_machine_service import generate_bill, get_products
-from models.product import Product
+from services.cash_machine_service import generate_bill, get_products, set_discount
+
 
 app = Flask(__name__)
 
@@ -27,26 +27,10 @@ def process_shop_list():
 
 @app.route("/setting/", methods=["GET"])
 def input_discount():
-    products = get_products()
-    return render_template("setting.html", products=products)
+    return render_template("setting.html", products=get_products())
 
 
 @app.route("/setting/", methods=["POST"])
 def setting_discount():
-    def __format_code_discounts():
-        code_discounts_ = dict()
-        for items in request.form:
-            code, discount_string = items.split(".")
-            discount = Discount.from_string(discount_string)
-            if code not in code_discounts_:
-                code_discounts_[code] = [discount]
-            code_discounts_[code].append(discount)
-        return code_discounts_
-
-    code_discounts = __format_code_discounts()
-    Product.reset_products()
-
-    for item in code_discounts:
-        product = Product.get_by_code(item)
-        product.set_discounts(code_discounts[item])
+    set_discount(request.form)
     return render_template("setting.html", products=get_products())
